--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["ethereum", "mev", "dex", "cffms"]
 
 
 [dependencies]
-ethers = { version = "2.0.0", default-features = false, features = ["abigen", "ws", "ipc", "rustls"] }
+ethers = { git = "https://github.com/yzevm/ethers-rs.git", branch = "v2.0.7", default-features = false, features = ["abigen", "ws", "ipc", "rustls"] }
 tokio = { version = "1.21.0", features = ["full"] }
 futures = "0.3.24"
 indicatif = "0.17.1"
@@ -20,5 +20,5 @@ async-trait = "0.1.57"
 serde_json = "1.0.85"
 serde = "1.0.145"
 num-bigfloat = "1.6.2"
-uniswap_v3_math = "0.2.26"
+uniswap_v3_math = { git = "https://github.com/yzevm/uniswap-v3-math.git", branch = "may8-and-ethers-v2.0.7" }
 regex = "1.7.1"
